fix: adjust download button alignment, remove hardcoded preselected style cy-64

--- a/apps/frontend/src/pages/dashboard-wrapper-mock/components/plan/styles.module.css
+++ b/apps/frontend/src/pages/dashboard-wrapper-mock/components/plan/styles.module.css
@@ -50,7 +50,7 @@
 }
 
 .content__tasks {
-	z-index: -1;
+	z-index: 0;
 	flex: 1;
 	flex-direction: column;
 	padding: var(--gutter);
